# homepage

./: .gitignore  cv.yaml  error.html  index.html  pyproject.toml  terragrunt.hcl
.github/workflows/: aws._yml  aws.yml  branch_test.yml  terraform.yml
homepage_index/: make_index.py
homepage_index/templates/: index_template.html
terraform/homepage/dev/: terragrunt.hcl
terraform/homepage/prd/: terragrunt.hcl
terraform/modules/homepage/: bucket.tf  dns.tf  variables.tf
