[tool.poetry]
name = "homepage-index"
version = "0.1.0"
description = ""
authors = ["James <jimmyhaugh@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
